fix xomments
